# Delta-ChatBot

./: README.MD  Shell-GBDT.ipynb  pyproject.toml  start.bat
delta-chatbot/: app.py
delta-chatbot/Vector-DB/index/: id_to_uuid_15cd7ad6-b2f3-4ad5-98e0-5e99e3a9bb98.pkl  index_metadata_15cd7ad6-b2f3-4ad5-98e0-5e99e3a9bb98.pkl  uuid_to_id_15cd7ad6-b2f3-4ad5-98e0-5e99e3a9bb98.pkl
delta-chatbot/modules/: utils.py
input/: tel.txt  telnyx-doc.json
simplechatbot/: app.py  create_vector_db.py
simplechatbot/Vector-DB/: chroma-collections.parquet  chroma-embeddings.parquet
simplechatbot/Vector-DB/index/: id_to_uuid_22286b04-28f7-43ce-8ad9-988c098a0fea.pkl  id_to_uuid_530cac66-20cc-4593-8191-fb69d44c4d7a.pkl  id_to_uuid_ad51b013-24ac-451c-a580-b51d01a1fa62.pkl  index_metadata_530cac66-20cc-4593-8191-fb69d44c4d7a.pkl  index_metadata_ad51b013-24ac-451c-a580-b51d01a1fa62.pkl  uuid_to_id_22286b04-28f7-43ce-8ad9-988c098a0fea.pkl  uuid_to_id_530cac66-20cc-4593-8191-fb69d44c4d7a.pkl  uuid_to_id_ad51b013-24ac-451c-a580-b51d01a1fa62.pkl
src/: app.py
src/Vector-DB/: chroma-collections.parquet  chroma-embeddings.parquet
src/Vector-DB/index/: index_metadata_22286b04-28f7-43ce-8ad9-988c098a0fea.pkl
