[tool.poetry]
name = "simplechatbot"
version = "0.1.0"
description = ""
authors = ["fotino21 <ataturhan21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
langchain = "^0.0.168"
pinecone-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
