[tool.poetry]
name = "simplechatbot"
version = "0.1.0"
description = ""
authors = ["fotino21 <ataturhan21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
langchain = "^0.0.168"
pinecone-client = "^2.2.1"
openai = "^0.27.6"
python-magic-bin = "0.4.14"
nltk = "^3.8.1"
unstructured = "^0.6.6"
libmagic = "^1.0"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
tiktoken = "^0.4.0"
chromadb = "^0.3.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
